--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,23 +1,23 @@
-name: Generate Snake Animation
+name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # every day at midnight
+    - cron: "0 0 * * *"  # every day at midnight
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
+      - name: Generate GitHub Snake
+        uses: Platane/snk@v3
         with:
-          github_user_name: ryanbabu
+          github_user_name: ryanbabu114
           outputs: |
             dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
 
-      - name: Push to GitHub
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: Push snake.svg to output branch
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
